Splits up system index tests into 3 files for 3 scenarios and refactors system index config yaml files
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>